--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,11 @@
 
 # SSH Port - Highly recommend changing this
 ssh_port=22
+
+# Username
+username=adeel
+password=password
+
+# Virtual Host root - Without trailing slash
+vhost=/home/adeel/vhosts
+
