--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,7 @@ password=password
 # Virtual Host root - Without trailing slash
 vhost=/home/adeel/vhosts
 
+# PHP Modules
+# Optional:
+# php5-dev php5-pspell php5-snmp php5-sqlite libssh2-php
+php_modules="php-pear php5-apc php5-cli php5-curl php5-gd php5-imagick php5-mcrypt php5-memcache php5-mhash php5-mysql php5-xmlrpc php5-xsl"
