A bit of clean up

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,5 +11,5 @@ vhost=/home/adeel/vhosts
 
 # PHP Modules
 # Optional:
-# php5-dev php5-pspell php5-snmp php5-sqlite libssh2-php
-php_modules="php-pear php5-apc php5-cli php5-curl php5-gd php5-imagick php5-mcrypt php5-memcache php5-mhash php5-mysql php5-xmlrpc php5-xsl"
+# php5-dev php5-pspell php5-snmp php5-sqlite libssh2-php php-pear php5-apc php5-xmlrpc php5-xsl
+php_modules="php5-cli php5-curl php5-gd php5-imagick php5-mcrypt php5-memcache php5-mhash php5-mysql"
